--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,13 +1,11 @@
-@import url('./base/_reset.scss');
-@import url('./base/_typography.scss');
+@import './base/reset.scss';
+@import './base/typography.scss';
 
-@import url('./components/_buttons.scss');
-@import url('./components/_carousel.scss');
+@import './components/buttons.scss';
+@import './components/carousel.scss';
 
-@import url('./layout/_footer.scss');
-@import url('./layout/_header.scss');
-@import url('./layout/_navigation.scss');
+@import './layout/footer.scss';
+@import './layout/header.scss';
+@import './layout/navigation.scss';
 
-@import url('./pages/_home.scss');
-
-@import url('./vendors/_bootstrap.scss');
+@import './pages/home.scss';
