featured section added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,30 @@ ol {
   color: #fff;
 }
 
+#featured .featured-container .row .product-card span {
+  font-size: 48px;
+  font-family: "Gochi Hand", cursive;
+  text-transform: capitalize;
+}
+#featured .featured-container .row .product-card #featured-text {
+  color: white;
+}
+#featured .featured-container .row .product-card .product-card-details {
+  font-family: "Roboto", sans-serif;
+}
+#featured .featured-container .row .product-card .product-card-details .product-detail-content {
+  font-size: 11px;
+  color: #5a5a5a;
+}
+#featured .featured-container .row .product-card .product-card-details .product-detail-content .product-detail-title {
+  font-size: 17px;
+  color: black;
+}
+#featured .featured-container .row .product-card .product-card-details p {
+  font-size: 34px;
+  font-weight: 900;
+}
+
 .custom-button {
   font-size: 14px;
   border: 2px solid #000;
@@ -49,4 +73,90 @@ ol {
 .custom-button:hover {
   background-color: #000;
   color: #fff;
+}
+
+#featured .featured-container {
+  padding: 120px 80px;
+}
+#featured .featured-container .row .product-card {
+  padding: 0;
+  position: relative;
+}
+#featured .featured-container .row .product-card span {
+  position: absolute;
+  top: 25px;
+  left: 45px;
+}
+#featured .featured-container .row .product-card img {
+  width: 100%;
+}
+#featured .featured-container .row .product-card .add-to-basket-button {
+  position: absolute;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+  bottom: 45px;
+  right: 45px;
+  transition: 0.4s ease-in;
+}
+#featured .featured-container .row .product-card .add-to-basket-button:hover {
+  fill: white;
+  background-color: black;
+}
+#featured .featured-container .row .product-card .product-card-details {
+  transform: scaleY(0);
+  position: absolute;
+  width: 350px;
+  height: 350px;
+  max-width: 65%;
+  max-height: 65%;
+  bottom: 35px;
+  right: 35px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  padding: 30px;
+  transform-origin: bottom;
+  transition: 0.4s;
+}
+#featured .featured-container .row .product-card .product-card-details .product-detail-content {
+  display: flex;
+  flex-direction: column;
+}
+#featured .featured-container .row .product-card .product-card-details p {
+  margin: 0;
+}
+#featured .featured-container .row .product-card .product-card-details .add-to-fav-button {
+  position: absolute;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+  top: 15px;
+  right: 15px;
+  transition: 0.4s ease-in;
+}
+#featured .featured-container .row .product-card .product-card-details .add-to-fav-button:hover {
+  fill: white;
+  background-color: black;
+}
+#featured .featured-container .row .product-card:hover .product-card-details {
+  transform: scaleY(1);
+}
+
+@media screen and (max-width: 480px) {
+  #featured .featured-container .row .product-card .product-card-details {
+    max-width: 100%;
+    max-height: 100%;
+    top: 0;
+    left: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
