--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -36,3 +36,56 @@
     }
   }
 }
+
+#featured-products{
+  font-family: 'Roboto', sans-serif;
+  .featured-products-content{
+    text-align: center;
+    text-transform: uppercase;
+    span{
+      font-size: 11px;
+      font-weight: 500;
+      color: #727272;
+    }
+    h2{
+      font-family: 'Yantramanav', sans-serif;
+      font-size: 60px;
+      font-weight: 700;
+    }
+  }
+  .featured-products-filter{
+    button{
+    font-family: 'Yantramanav', sans-serif;
+    font-weight: 900;
+    color: black;
+    font-size: 12px;
+      text-transform: uppercase;
+    }
+  }
+  .featured-products-container{
+    .product-card-content{
+      a{
+        color: #727272;
+        font-size: 11px;
+        text-transform: uppercase;
+        font-weight: 700;
+      }
+      .product-title{
+        font-family: 'Yantramanav', sans-serif;
+        font-size: 17px;
+        color: black;
+        font-weight: 600;
+      }
+      .product-category{
+        font-size: 14px;
+        text-transform: capitalize;
+        font-weight: initial;
+      }
+      span{
+        font-family: 'Yantramanav', sans-serif;
+        font-size: 14px;
+        font-weight: 800;
+      }
+    }
+  }
+}
