featured-container section updated

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -4,6 +4,7 @@
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Yantramanav', sans-serif;
 
+// featured section start
 #featured {
   .featured-container {
     .row {
@@ -36,7 +37,9 @@
     }
   }
 }
+// featured section end
 
+// featured-products section start 
 #featured-products{
   font-family: 'Roboto', sans-serif;
   .featured-products-content{
@@ -89,3 +92,4 @@
     }
   }
 }
+// featured-products section end 
